2007-10-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/p89lpc938.h: new, added, thanks Kyle Guinn
	* src/pic/glue.c,
	* src/SDCCval.c,
	* src/SDCCast.c,
	* src/SDCCast.h: replaced AST_LIT_VALUE with AST_FLOAT_VALUE and
	  AST_ULONG_VALUE
	* src/SDCCast.c (decorateType): improved optimization of tri-op

2007-10-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (leftRightUseAcc): use macro IS_OP_ACCUSE
	* src/SDCCast.c (decorateType): optimize bit=cond?1:0, RFE 1738430
	* support/regression/tests/bug-223113.c,
	* support/regression/tests/bug-426632.c,
	* support/regression/tests/bug-468811.c,
	* support/regression/tests/bug-477835.c,
	* support/regression/tests/bug-478094.c,
	* support/regression/tests/bug-499644.c,
	* support/regression/tests/bug-524209.c,
	* support/regression/tests/bug-524211.c,
	* support/regression/tests/packcast.c,
	* support/regression/tests/structidx.c: added empty tests
	* support/regression/tests/bug-607243.c: enabled test

2007-10-06 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped version to 2.7.4 to indicate the full
	   support of universal binaries on Mac OS X

2007-10-02 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.h: unified double2ul macro for all platforms
	* src/SDCCval.c: fixed bug #1777758 - applied Maarten's patch
	* support/regression/tests/bitwise.c: added regtest for bug #1777758

2007-09-30 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.h: fixed bug #1739860 - sdcc does not work correctly on some
	  platforms
	* sdcc_vc_in.h: enabled warnings
	* src/hc08/gen.c: fixed MSVC warning C4146: unary minus operator applied to
	  unsigned type, result still unsigned
	* src/mcs51/peep.c: fixed gcc warning: suggest parentheses around && within ||

2007-09-28 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): prevent buffer underflow error
	* src/pic/pcoderegs.c (OptimizeRegUsage): avoid dereferencing